fix scrollbar

--- a/src/styles/locomotive-scroll.css
+++ b/src/styles/locomotive-scroll.css
@@ -1,7 +1,11 @@
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
-  backface-visibility: hidden;
-	transform: translateZ(0);
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;  
   overflow: hidden; }
 
 html.has-scroll-dragging {
